:lipstick: Button fixed - overlapped from lack of box model

--- a/docs/src/components/layout.css
+++ b/docs/src/components/layout.css
@@ -720,6 +720,7 @@ pre tt:after {
 /*--- Layout Styles ---**/
 /*--- Button ---**/
 .btn {
+  display: inline-block;
   background: rebeccapurple;
   color: #FFF;
   padding: 0.7em 1em;
